--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 # solutionPath needs to be changed
 variables:
-  solutionPath: StoreApplication
+  solutionPath: Project2
 
 jobs:
   - job: build_linux
