--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,12 +48,12 @@ jobs:
         inputs:
           pollingTimeoutSec: '300'
       
-      # need to create the cobertura file
+      # $(Agent.TempDirectory)/*/coverage.cobertura.xml
       - task: PublishCodeCoverageResults@1
         displayName: Publish Code Coverage
         inputs:
           codeCoverageTool: 'Cobertura'
-          summaryFileLocation: '$(Agent.TempDirectory)/*/coverage.cobertura.xml'
+          summaryFileLocation: '**/TestResults/*/coverage.cobertura.xml'
           failIfCoverageEmpty: true
       
       - script: dotnet publish -c Release -o ../publish
