Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,12 +32,13 @@ jobs:
         displayName: Build Project/Application and Release Config
         workingDirectory: $(solutionPath)
 
+      # -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura,opencover'
       - task: DotNetCoreCLI@2
         displayName: Run project tests
         inputs:
           command: 'test'
           projects: '$(solutionPath)'
-          arguments: '-c Release --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura,opencover'
+          arguments: '-c Release --collect:"XPlat Code Coverage"'
           testRunTitle: 'ubuntu'
       
       - task: SonarCloudAnalyze@1
