--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,10 @@ jobs:
           scannerMode: 'MSBuild'
           projectKey: '2006-jun15-net_Project-2-Asher-Daniel-Jordan'
           projectName: 'Hospital Management'
-          extraProperties: |
-            sonar.exclusions=**/lib/**
-            sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
-            sonar.cs.opencover.reportsPaths=$(Agent.TempDirectory)/*/coverage.opencover.xml
+          #extraProperties: |
+            #sonar.exclusions=**/lib/**
+            #sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
+            #sonar.cs.opencover.reportsPaths=$(Agent.TempDirectory)/*/coverage.opencover.xml
 
       - script: dotnet build -c Release
         displayName: Build Project/Application and Release Config
