--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,14 +32,10 @@ jobs:
         displayName: Build Project/Application and Release Config
         workingDirectory: $(solutionPath)
 
-      # -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura,opencover'
-      - task: DotNetCoreCLI@2
-        displayName: Run project tests
-        inputs:
-          command: 'test'
-          projects: '$(solutionPath)'
-          arguments: '-c Release --collect:"XPlat Code Coverage"'
-          testRunTitle: 'ubuntu'
+      - script: dotnet test --collect:"XPlat Code Coverage"
+        displayName: Run Project Tests
+        workingDirectory: $(solutionPath)
+      
       
       - task: SonarCloudAnalyze@1
         displayName: Run SonarCloud Analysis
@@ -54,7 +50,7 @@ jobs:
         displayName: Publish Code Coverage
         inputs:
           codeCoverageTool: 'Cobertura'
-          summaryFileLocation: '/home/vsts/work/_temp/*/coverage.cobertura.xml'
+          summaryFileLocation: '$(Agent.TempDirectory)/*/coverage.cobertura.xml'
           failIfCoverageEmpty: true
       
       - script: dotnet publish -c Release -o ../publish
