--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ jobs:
         inputs:
           codeCoverageTool: 'Cobertura'
           summaryFileLocation: '**/TestResults/*/coverage.cobertura.xml'
-          failIfCoverageEmpty: true
+          failIfCoverageEmpty: false
       
       - script: dotnet publish -c Release -o ../publish
         displayName: Publish our application
@@ -61,7 +61,7 @@ jobs:
         displayName: Azure App Service Deployment
         inputs:
           ConnectionType: 'AzureRM'
-          #azureSubscription: 'Azure subscription 1(6bfb27c8-f9ac-40e8-9b4f-55922e406dbf)'
+          azureSubscription: 'Azure subscription 1(4a9c4809-c659-4f24-9e67-59d675e2dad7)'
           appType: 'webApp'
-          #WebAppName: 'Store-Applicatoin'
+          WebAppName: 'Project-2-Asher-Daniel-Jordan'
           packageForLinux: '$(System.DefaultWorkingDirectory)/publish'
