Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,10 @@ jobs:
         inputs:
           pollingTimeoutSec: '300'
       
+      - script: cat /Project2.Test/TestResults/*/coverage.cobertura.xml
+        displayName: Open test file
+        workingDirectory: $(solutionPath)
+      
       # $(Agent.TempDirectory)/*/coverage.cobertura.xml
       - task: PublishCodeCoverageResults@1
         displayName: Publish Code Coverage
