Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ jobs:
         inputs:
           codeCoverageTool: 'Cobertura'
           summaryFileLocation: '$(solutionPath)/Project2.Test/TestResults/*/coverage.cobertura.xml'
-          failIfCoverageEmpty: true
+          failIfCoverageEmpty: false
       
       - script: dotnet publish -c Release -o ../publish
         displayName: Publish our application
