--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,10 @@ jobs:
         inputs:
           pollingTimeoutSec: '300'
       
+      - script: cat coverage.cobertura.xml
+        displayName: open coverage file
+        workingDirectory: $(solutionPath)/*/TestResults/*/coverage.cobertura.xml
+      
       #$(Agent.TempDirectory)/*/coverage.cobertura.xml
       - task: PublishCodeCoverageResults@1
         displayName: Publish Code Coverage
