Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ jobs:
       
       - script: cat coverage.cobertura.xml
         displayName: open coverage file
-        workingDirectory: $(solutionPath)/*/TestResults/*/coverage.cobertura.xml
+        workingDirectory: '$(solutionPath)/*/TestResults/*/coverage.cobertura.xml'
       
       #$(Agent.TempDirectory)/*/coverage.cobertura.xml
       - task: PublishCodeCoverageResults@1
