--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,8 @@ jobs:
           projectName: 'Hospital Management'
           extraProperties: |
             sonar.exclusions=**/lib/**
-            sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
-            sonar.cs.opencover.reportsPaths=$(solutionPath)/*/TestResults/*/coverage.cobertura.xml
+            sonar.cs.vstest.reportsPaths=$(solutionPath)/*/TestResults/*.trx
+            sonar.cs.opencover.reportsPaths=$(solutionPath)/*/TestResults/*/coverage.opencover.xml
 
       - script: dotnet build -c Release
         displayName: Build Project/Application and Release Config
