--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ jobs:
           projectName: 'Hospital Management'
           extraProperties: |
             sonar.exclusions=**/lib/**
-            sonar.cs.vstest.reportsPaths=$(solutionPath)/*/TestResults/*.trx
+            sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/*.trx
             sonar.cs.opencover.reportsPaths=$(solutionPath)/*/TestResults/*/coverage.opencover.xml
 
       - script: dotnet build -c Release
